@@ -13,11 +13,11 @@
  * @package ScoreRender
 */
 class pmwRender extends ScoreRender
-                implements ScoreRender_Notation
+                implements SrNotationInterface
 {
 
 /**
- * Refer to {@link ScoreRender_Notation::get_music_fragment() interface method}
+ * Refer to {@link SrNotationInterface::get_music_fragment() interface method}
  * for more detail.
  *
  * @uses $img_max_width
@@ -68,7 +68,7 @@ protected function conversion_step2 ($intermediate_image, $final_image)
 }
 
 /**
- * Refer to {@link ScoreRender_Notation::is_notation_usable() interface method}
+ * Refer to {@link SrNotationInterface::is_notation_usable() interface method}
  * for more detail.
  * @uses is_prog_usable()
  */
@@ -81,12 +81,12 @@ public static function is_notation_usable ($errmsgs, $opt)
 		if ( ! empty ($opt[$setting_name]) && ! parent::is_prog_usable (
 			$program['test_output'], $opt[$setting_name], $program['test_arg']) )
 				$ok = false;
-			
+
 	if (!$ok) $errmsgs[] = 'pmw_bin_problem';
 }
 
 /**
- * Refer to {@link ScoreRender_Notation::define_admin_messages() interface method}
+ * Refer to {@link SrNotationInterface::define_admin_messages() interface method}
  * for more detail.
  */
 public static function define_admin_messages ($adm_msgs)
@@ -100,7 +100,7 @@ public static function define_admin_messages ($adm_msgs)
 }
 
 /**
- * Refer to {@link ScoreRender_Notation::program_setting_entry() interface method}
+ * Refer to {@link SrNotationInterface::program_setting_entry() interface method}
  * for more detail.
  */
 public static function program_setting_entry ($output)
@@ -114,7 +114,7 @@ public static function program_setting_entry ($output)
 }
 
 /**
- * Refer to {@link ScoreRender_Notation::define_setting_type() interface method}
+ * Refer to {@link SrNotationInterface::define_setting_type() interface method}
  * for more detail.
  */
 public static function define_setting_type ($settings)
@@ -126,7 +126,7 @@ public static function define_setting_type ($settings)
 }
 
 /**
- * Refer to {@link ScoreRender_Notation::define_setting_value() interface method}
+ * Refer to {@link SrNotationInterface::define_setting_value() interface method}
  * for more detail.
  */
 public static function define_setting_value ($settings)
